--- a/Mono.GameMath/Mono.GameMath.csproj
+++ b/Mono.GameMath/Mono.GameMath.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Safe</Configuration>
@@ -9,12 +9,13 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Mono.GameMath</RootNamespace>
     <AssemblyName>Mono.GameMath</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Mono.GameMath.snk</AssemblyOriginatorKeyFile>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Safe|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Safe</OutputPath>
     <ErrorReport>prompt</ErrorReport>
@@ -22,6 +23,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ConsolePause>false</ConsolePause>
     <DefineConstants>SAFE</DefineConstants>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unsafe|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -45,9 +47,12 @@
     <Reference Include="Mono.Simd">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="ContainmentType.cs" />
+    <Compile Include="PlaneIntersectionType.cs" />
     <Compile Include="Vector4.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
@@ -61,7 +66,6 @@
     <Compile Include="BoundingSphere.cs" />
     <Compile Include="BoundingFrustum.cs" />
     <Compile Include="MathHelper.cs" />
-    <Compile Include="Enums.cs" />
     <Compile Include="Color.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
